--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <source
                      sizes="1920w, 1280w, 640w" 
                      srcset="img/header.jpg 1920w" 
-                     type="image/jpeg">
-                <img loading="lazy" decoding="async" src="img/header.jpg" lazyalt="imagen" width="1000" height="500">
+                     type="image/png">
+                <img loading="lazy" decoding="async" src="img/header.png" lazyalt="imagen" width="1000" height="500">
                 </picture>
             </div> <!-- .imagen-header -->
             <div class="texto-header">
@@ -67,5 +67,40 @@
             </div>
         </div>
     </section>
+    <main class="contenedor modelos">
+        <h2 class="text-center degradado-verde header-modelos">Elige tus TechPRO</h2>
+        <div class="listado-modelos">
+            <div class="modelo modelo-x">
+                <h3>TechPRO X</h3>
+                <p class="precio">$299</p>
+            </div>
+            <div class="modelo modelo-y">
+                <h3>TechPRO Y</h3>
+                <p class="precio">$399</p>
+            </div>
+            <div class="modelo modelo-z">
+                <h3>TechPRO Z</h3>
+                <p class="precio">$499</p>
+            </div>
+        </div>
+    </main>
+    <section class="newsletter">
+        <div class="contenido-newsletter contenedor">
+            <div class="texto-newsletter">
+                <h2>Recibe Actualizaciones</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem molestiae minima tempore modi beatae ab distinctio quis dolor necessitatibus dicta, molestias assumenda, possimus aperiam illum. Eos saepe optio magni adipisci?</p>
+                <form action="" class="formulario">
+                    <div class="input">
+                        <input type="text" placeholder="Tu Correo">
+                    </div>
+                    <input type="submit" value="Inscribirme">
+                </form>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <p>Todos los derechos reservados</p>
+    </footer>
+    <script src="js/imagenes.js"></script>
 </body>
 </html>
